// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSSBaseline should render correctly 1`] = `
initialize {
  "0": Object {
    "attribs": Object {},
    "children": Array [
      Object {
        "data": "
        html,
        body {
          background-color: #fff;
          color: #000;
        }

        html {
          font-size: 14px;
          line-height: 1.5714rem;
          --zeit-icons-background: #fff;
          letter-spacing: 0.0071rem;
        }

        body {
          -webkit-font-smoothing: antialiased;
          -moz-osx-font-smoothing: grayscale;
          text-rendering: optimizeLegibility;
          font-size: 1rem;
          line-height: 1.5;
          margin: 0;
          padding: 0;
          min-height: 100%;
          position: relative;
          overflow-x: hidden;
          font-family: &quot;Circular Std Book&quot;, &quot;PingFang SC&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, &quot;Roboto&quot;, &quot;Oxygen&quot;, &quot;Ubuntu&quot;, &quot;Cantarell&quot;, &quot;Fira Sans&quot;, &quot;Droid Sans&quot;, &quot;Helvetica Neue&quot;, sans-serif;
        }

        #__next {
          overflow-x: hidden;
        }

        *,
        *:before,
        *:after {
          box-sizing: inherit;
          text-rendering: geometricPrecision;
          -webkit-tap-highlight-color: transparent;
        }

        p,
        small {
          font-weight: 400;
          color: inherit;
          letter-spacing: 0.0143rem;
          font-family: &quot;Circular Std Book&quot;, &quot;PingFang SC&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, &quot;Roboto&quot;, &quot;Oxygen&quot;, &quot;Ubuntu&quot;, &quot;Cantarell&quot;, &quot;Fira Sans&quot;, &quot;Droid Sans&quot;, &quot;Helvetica Neue&quot;, sans-serif;
        }

        p {
          margin: 1rem 0;
          font-size: 1em;
          line-height: 1.625em;
        }

        small {
          margin: 0;
          line-height: 1.5;
          font-size: 0.8571rem;
        }

        b {
          font-weight: 600;
        }

        span {
          font-size: inherit;
          color: inherit;
          font-weight: inherit;
        }

        img {
          max-width: 100%;
        }

        a {
          cursor: pointer;
          font-size: inherit;
          -webkit-touch-callout: none;
          -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
          -webkit-box-align: center;
          align-items: center;
          color: #0070f3;
          text-decoration: none;
        }

        a:hover {
          text-decoration: none;
        }

        ul,
        ol {
          padding: 0;
          list-style-type: none;
          margin: 8px 8px 8px
            16px;
          color: #000;
        }

        ol {
          list-style-type: decimal;
        }

        li {
          margin-bottom: 0.625rem;
          font-size: 1em;
          line-height: 1.625em;
        }

        ul li:before {
          content: &#x27;–&#x27;;
          display: inline-block;
          color: #888;
          position: absolute;
          margin-left: -0.9375rem;
        }

        h1,
        h2,
        h3,
        h4,
        h5,
        h6 {
          color: inherit;
          margin: 0 0 0.625rem 0;
        }

        h1 {
          font-size: 3.7144rem;
          letter-spacing: 0.0143rem;
          line-height: 4.5714rem;
          font-weight: 700;
        }

        h2 {
          font-size: 3.1429rem;
          line-height: 3.8571rem;
          letter-spacing: 0rem;
          font-weight: 600;
        }

        h3 {
          font-size: 2.2857rem;
          line-height: 2.8571rem;
          letter-spacing: 0.0071rem;
          font-weight: 600;
        }

        h4 {
          font-size: 1.8571rem;
          line-height: 2.2857rem;
          letter-spacing: 0.0143rem;
          font-weight: 600;
        }

        h5 {
          font-size: 1.4286rem;
          line-height: 1.8571rem;
          letter-spacing: 0.0143rem;
          font-weight: 600;
        }

        h6 {
          font-size: 1.2857rem;
          line-height: 1.7143rem;
          letter-spacing: 0.0143rem;
          font-weight: 600;
        }

        button,
        input,
        select,
        textarea {
          font-family: inherit;
          font-size: inherit;
          line-height: inherit;
          color: inherit;
          margin: 0;
        }

        button:focus,
        input:focus,
        select:focus,
        textarea:focus {
          outline: none;
        }

        code {
          color: #f81ce5;
          font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
          font-size: 0.9em;
          white-space: pre-wrap;
        }

        code:before,
        code:after {
          content: &#x27;\`&#x27;;
        }

        pre {
          border: 1px solid #eaeaea;
          border-radius: 4px;
          padding: calc(16px * 0.75) 16px;
          margin: 16px 0;
          font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
          white-space: pre;
          overflow: auto;
          line-height: 1.5;
          text-align: left;
          font-size: 0.875rem;
          -webkit-overflow-scrolling: touch;
        }

        pre code {
          color: #000;
          font-size: 0.8125rem;
          line-height: 1.25rem;
          white-space: pre;
        }

        pre code:before,
        pre code:after {
          display: none;
        }

        pre :global(p) {
          margin: 0;
        }

        pre::-webkit-scrollbar {
          display: none;
          width: 0;
          height: 0;
          background: transparent;
        }

        hr {
          border-color: #eaeaea;
        }

        details {
          background-color: #fafafa;
          border: none;
        }

        details:focus,
        details:hover,
        details:active {
          outline: none;
        }

        summary {
          cursor: pointer;
          user-select: none;
          list-style: none;
          outline: none;
        }

        summary::-webkit-details-marker,
        summary::before {
          display: none;
        }

        summary::-moz-list-bullet {
          font-size: 0;
        }

        summary:focus,
        summary:hover,
        summary:active {
          outline: none;
          list-style: none;
        }

        blockquote {
          padding: calc(0.667 * 16px) 16px;
          color: #666;
          background-color: #fafafa;
          border-radius: 4px;
          margin: 1.5rem 0;
          border: 1px solid #eaeaea;
        }

        blockquote :global(*:first-child) {
          margin-top: 0;
        }

        blockquote :global(*:last-child) {
          margin-bottom: 0;
        }

        ::selection {
          background-color: #79ffe1;
          color: #000;
        }
      ",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "text",
      },
    ],
    "name": "style",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "style",
    "x-attribsNamespace": Object {},
    "x-attribsPrefix": Object {},
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`CSSBaseline should render dark mode correctly 1`] = `
initialize {
  "0": Object {
    "attribs": Object {},
    "children": Array [
      Object {
        "data": "
        html,
        body {
          background-color: #000;
          color: #fff;
        }

        html {
          font-size: 14px;
          line-height: 1.5714rem;
          --zeit-icons-background: #000;
          letter-spacing: 0.0071rem;
        }

        body {
          -webkit-font-smoothing: antialiased;
          -moz-osx-font-smoothing: grayscale;
          text-rendering: optimizeLegibility;
          font-size: 1rem;
          line-height: 1.5;
          margin: 0;
          padding: 0;
          min-height: 100%;
          position: relative;
          overflow-x: hidden;
          font-family: &quot;Circular Std Book&quot;, &quot;PingFang SC&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, &quot;Roboto&quot;, &quot;Oxygen&quot;, &quot;Ubuntu&quot;, &quot;Cantarell&quot;, &quot;Fira Sans&quot;, &quot;Droid Sans&quot;, &quot;Helvetica Neue&quot;, sans-serif;
        }

        #__next {
          overflow-x: hidden;
        }

        *,
        *:before,
        *:after {
          box-sizing: inherit;
          text-rendering: geometricPrecision;
          -webkit-tap-highlight-color: transparent;
        }

        p,
        small {
          font-weight: 400;
          color: inherit;
          letter-spacing: 0.0143rem;
          font-family: &quot;Circular Std Book&quot;, &quot;PingFang SC&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, &quot;Roboto&quot;, &quot;Oxygen&quot;, &quot;Ubuntu&quot;, &quot;Cantarell&quot;, &quot;Fira Sans&quot;, &quot;Droid Sans&quot;, &quot;Helvetica Neue&quot;, sans-serif;
        }

        p {
          margin: 1rem 0;
          font-size: 1em;
          line-height: 1.625em;
        }

        small {
          margin: 0;
          line-height: 1.5;
          font-size: 0.8571rem;
        }

        b {
          font-weight: 600;
        }

        span {
          font-size: inherit;
          color: inherit;
          font-weight: inherit;
        }

        img {
          max-width: 100%;
        }

        a {
          cursor: pointer;
          font-size: inherit;
          -webkit-touch-callout: none;
          -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
          -webkit-box-align: center;
          align-items: center;
          color: #3291ff;
          text-decoration: none;
        }

        a:hover {
          text-decoration: none;
        }

        ul,
        ol {
          padding: 0;
          list-style-type: none;
          margin: 8px 8px 8px
            16px;
          color: #fff;
        }

        ol {
          list-style-type: decimal;
        }

        li {
          margin-bottom: 0.625rem;
          font-size: 1em;
          line-height: 1.625em;
        }

        ul li:before {
          content: &#x27;–&#x27;;
          display: inline-block;
          color: #666;
          position: absolute;
          margin-left: -0.9375rem;
        }

        h1,
        h2,
        h3,
        h4,
        h5,
        h6 {
          color: inherit;
          margin: 0 0 0.625rem 0;
        }

        h1 {
          font-size: 3.7144rem;
          letter-spacing: 0.0143rem;
          line-height: 4.5714rem;
          font-weight: 700;
        }

        h2 {
          font-size: 3.1429rem;
          line-height: 3.8571rem;
          letter-spacing: 0rem;
          font-weight: 600;
        }

        h3 {
          font-size: 2.2857rem;
          line-height: 2.8571rem;
          letter-spacing: 0.0071rem;
          font-weight: 600;
        }

        h4 {
          font-size: 1.8571rem;
          line-height: 2.2857rem;
          letter-spacing: 0.0143rem;
          font-weight: 600;
        }

        h5 {
          font-size: 1.4286rem;
          line-height: 1.8571rem;
          letter-spacing: 0.0143rem;
          font-weight: 600;
        }

        h6 {
          font-size: 1.2857rem;
          line-height: 1.7143rem;
          letter-spacing: 0.0143rem;
          font-weight: 600;
        }

        button,
        input,
        select,
        textarea {
          font-family: inherit;
          font-size: inherit;
          line-height: inherit;
          color: inherit;
          margin: 0;
        }

        button:focus,
        input:focus,
        select:focus,
        textarea:focus {
          outline: none;
        }

        code {
          color: #79ffe1;
          font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
          font-size: 0.9em;
          white-space: pre-wrap;
        }

        code:before,
        code:after {
          content: &#x27;\`&#x27;;
        }

        pre {
          border: 1px solid #333;
          border-radius: 4px;
          padding: calc(16px * 0.75) 16px;
          margin: 16px 0;
          font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
          white-space: pre;
          overflow: auto;
          line-height: 1.5;
          text-align: left;
          font-size: 0.875rem;
          -webkit-overflow-scrolling: touch;
        }

        pre code {
          color: #fff;
          font-size: 0.8125rem;
          line-height: 1.25rem;
          white-space: pre;
        }

        pre code:before,
        pre code:after {
          display: none;
        }

        pre :global(p) {
          margin: 0;
        }

        pre::-webkit-scrollbar {
          display: none;
          width: 0;
          height: 0;
          background: transparent;
        }

        hr {
          border-color: #333;
        }

        details {
          background-color: #111;
          border: none;
        }

        details:focus,
        details:hover,
        details:active {
          outline: none;
        }

        summary {
          cursor: pointer;
          user-select: none;
          list-style: none;
          outline: none;
        }

        summary::-webkit-details-marker,
        summary::before {
          display: none;
        }

        summary::-moz-list-bullet {
          font-size: 0;
        }

        summary:focus,
        summary:hover,
        summary:active {
          outline: none;
          list-style: none;
        }

        blockquote {
          padding: calc(0.667 * 16px) 16px;
          color: #888;
          background-color: #111;
          border-radius: 4px;
          margin: 1.5rem 0;
          border: 1px solid #333;
        }

        blockquote :global(*:first-child) {
          margin-top: 0;
        }

        blockquote :global(*:last-child) {
          margin-bottom: 0;
        }

        ::selection {
          background-color: #f81ce5;
          color: #fff;
        }
      ",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "text",
      },
    ],
    "name": "style",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "style",
    "x-attribsNamespace": Object {},
    "x-attribsPrefix": Object {},
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;
